# discord.nvim

./: .gitignore  LICENSE  README.md  convert.py  convert.sh  fetch-icons.sh  patch.json  pyproject.toml
doc/: discordRPC.txt
lua/discord/: api.lua  events.lua  init.lua
plugin/: discord.lua
