[tool.poetry]
name = "discord-nvim"
version = "0.1.0"
description = ""
authors = ["Epic_birb"]
readme = "README.md"
packages = [{include = "discord"}]

[tool.poetry.dependencies]
python = "3.11.7"
pillow = "^10.3.0"
rlpycairo = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
